@@ -69,7 +69,7 @@
         <version.postgresql.driver>42.0.0-SNAPSHOT</version.postgresql.driver>
         <version.mysql.server>5.7</version.mysql.server>
         <version.mysql.driver>5.1.40</version.mysql.driver>
-        <version.mysql.binlog>0.9.0</version.mysql.binlog>
+        <version.mysql.binlog>0.13.0</version.mysql.binlog>
         <version.mongo.server>3.2.12</version.mongo.server>
         <version.mongo.driver>3.4.2</version.mongo.driver>
         
@@ -83,9 +83,11 @@
        <!-- Maven Plugins -->
         <version.resources.plugin>2.7</version.resources.plugin>
         <version.dependency.plugin>2.10</version.dependency.plugin>
+        <version.enforcer.plugin>3.0.0-M1</version.enforcer.plugin>
+        <version.jar.plugin>3.0.2</version.jar.plugin>
+        <version.source.plugin>3.0.1</version.source.plugin>
         <version.assembly.plugin>2.4</version.assembly.plugin>
         <version.war.plugin>2.5</version.war.plugin>
-        <version.codehaus.helper.plugin>1.8</version.codehaus.helper.plugin>
         <version.google.formatter.plugin>0.3.1</version.google.formatter.plugin>
         <version.docker.maven.plugin>0.20.1</version.docker.maven.plugin>
         <version.staging.plugin>1.6.3</version.staging.plugin>
@@ -93,10 +95,6 @@
 
         <!-- Dockerfiles -->
         <docker.maintainer>Debezium community</docker.maintainer>
-
-        <!-- Protobuf compiler options -->
-        <protobuf.input.directory>${project.basedir}/src/main/proto</protobuf.input.directory>
-        <protobuf.output.directory>${project.basedir}/generated-sources</protobuf.output.directory>
 
         <!--Skip long running tests by default-->
         <skipLongRunningTests>true</skipLongRunningTests>
@@ -106,6 +104,9 @@
 
         <!-- No debug options by default -->
         <debug.argline />
+
+        <!-- No modules options by default -->
+        <modules.argline />
     </properties>
 
     <modules>
@@ -422,13 +423,8 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${version.failsafe.plugin}</version>
                     <configuration>
-                        <argLine>${debug.argline}</argLine>
+                        <argLine>${debug.argline} ${modules.argline}</argLine>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>${version.codehaus.helper.plugin}</version>
                 </plugin>
                 <plugin>
                     <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
@@ -495,24 +491,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-classes</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${protobuf.output.directory}</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
@@ -577,7 +555,7 @@
                             <value>${skipLongRunningTests}</value>
                         </property>
                     </systemProperties>
-                    <argLine>-Djava.awt.headless=true ${debug.argline}</argLine>
+                    <argLine>-Djava.awt.headless=true ${debug.argline} ${modules.argline}</argLine>
                     <!--runOrder>alphabetical</runOrder-->
                     <useFile>false</useFile>
                     <enableAssertions>true</enableAssertions>
@@ -722,6 +700,15 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>jdk9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <properties>
+                <modules.argline>--add-modules java.xml.bind</modules.argline>
+            </properties>
         </profile>
     </profiles>
 </project>
